fix carousel not showing text

--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -30,6 +30,7 @@
     font-size: 12px;
     line-height: 16px;
     text-align: left;
+    z-index: 10;
 }
 
 .carousel-caption-title {
