--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -40,7 +40,7 @@
 }
 
 .event-registration-section {
-    width: 554px;
+    width: 594px;
     height:320px;
     border: 1px solid var(--Grays-Gray-6, #F2F2F7)
 }
